# inframodel

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: infra_file.rs  investigation.rs  investigation_aggregator.rs  investigation_collection.rs  lib.rs  observation.rs  parse_result.rs  parsed_value.rs
src/infra_file/: file.rs  file_info.rs  format.rs  parse.rs  spatial.rs
src/investigation/: classification.rs  coordinates.rs  depthless_rock_sample.rs  equipment.rs  initial_borehole.rs  line.rs  method.rs  organisations.rs  program.rs  record.rs  standpipe.rs  termination.rs  work.rs
src/observation/: lab_results.rs  observation_values.rs
