[package]
name = "inframodel"
version = "0.1.0"
edition = "2021"
description = "A library to parse InfraModel geotechnical ground investigation data format used in Finland"
authors = ["Elis Kivi <elis.kivi1@gmail.com>"]
homepage = "https://github.com/eliskivi/inframodel"
repository = "https://github.com/eliskivi/inframodel"
readme = "README.md"
keywords = ["infra", "geo", "inframodel", "geotechnical", "finland"]
license = "MIT"


[dependencies]
chardetng = "0.1.17"
chrono = "0.4.39"
encoding_rs = "0.8.35"
regex = "1.11.1"
lazy_static = "1.5.0"
walkdir = "2.5.0"
rayon = "1.10.0"
